<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        android:layout_gravity="center_horizontal"
        android:paddingTop="200dp"
        android:paddingBottom="20dp"
        style="@style/HeaderFontStyle"/>

    <!-- Input field for username, set a minimum height to prevent too small sizes- -->
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:gravity="center"
        style="@style/inputFontStyle"
        android:background="@drawable/input_border"
        android:layout_marginBottom="20dp">
    </EditText>

    <!-- Input field for password, set a minimum height to prevent too small sizes-->
    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        style="@style/inputFontStyle"
        android:background="@drawable/input_border">
    </EditText>

    <!-- Prompt user to sign up -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up_prompt"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        style="@style/DefaultFontStyle">
    </TextView>

    <!-- button sign up TODO: make button look like a link -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up_button"
        style="@style/LinkButtonStyle"/>

    <!-- button sign in -->
    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in_button"
        style="@style/ButtonFontStyle"/>
</LinearLayout>
